--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 <h2>News</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>I will serve as a PC for ICMR, 2026.</td></tr>
+		<tr><td>I will serve as a SPC for IJCAI, 2026.</td></tr>
 		<tr><td>Congratulations! Google Scholar citations has reached 5,000 citations! 2025.</td></tr>
 		<tr><td>Congratulations! ESRT has reached 1,000 citations! 2025.</td></tr>
 		<tr><td>Congratulations! Selected into the World's Top 2% Scientists list, 2025.</td></tr>
@@ -262,7 +264,7 @@
 </tbody>
 </table>
 
-<h2>Selected Publications [Total Citations: 5504] [Highest Citation: 1131] </h2>
+<h2>Selected Publications [Total Citations: 5531] [Highest Citation: 1133] </h2>
 <h4>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
@@ -949,6 +951,12 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> <a href="https://www.codabench.org/competitions/12929/", target="_blank">CVPR-NTIRE 2026 Light Field Image Super-Resolution Challenge</a></td>
+		</tr>
+		<tr>
+			<td> <a href="https://www.codabench.org/competitions/12891/", target="_blank">CVPR-NTIRE 2026 3D Content Super-Resolution Challenge</a></td>
+		</tr>
+		<tr>
 			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2024", target="_blank">CVPR-NTIRE 2024: Stereo Image Super-Resolution Challenge</a></td>
 		</tr>
 		<tr>
@@ -966,9 +974,15 @@
 	</tbody>
 </table>
 
-<h3>Program Committee Member</h3>
+<h3>Senior/Program Committee Member</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
+			<tr>
+				<td> <a href="https://icmr2026.org/", target="_blank">16th ACM International Conference on Multimedia Retrieval (ICMR 26), 2026, PC.</a></td>
+			</tr>
+			<tr>
+				<td> <a href="https://2026.ijcai.org/", target="_blank">35th International Conference on Artificial Intelligence (IJCAI-26), 2026, PC.</a></td>
+			</tr>
 			<tr>
 				<td> <a href="https://ecai2025.org/", target="_blank">28th European Conference on Artificial Intelligence (ECAI-25), 2025.</a></td>
 			</tr>
@@ -1226,7 +1240,7 @@
  <!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>-->  
 <br>
-&copy; Juncheng Li | Last updated: 2025-12
+&copy; Juncheng Li | Last updated: 2026-1
 </center>
 </p>
 
