--- a/index_zw.html
+++ b/index_zw.html
@@ -279,7 +279,7 @@
 </table>
 
 
-<h2>精选出版物 [总引用: 5504] [最高引用: 1131] </h2>
+<h2>精选出版物 [总引用: 5531] [最高引用: 1133] </h2>
 <h4>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
@@ -983,6 +983,12 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> <a href="https://www.codabench.org/competitions/12929/", target="_blank">CVPR-NTIRE 2026 Light Field Image Super-Resolution Challenge</a></td>
+		</tr>
+		<tr>
+			<td> <a href="https://www.codabench.org/competitions/12891/", target="_blank">CVPR-NTIRE 2026 3D Content Super-Resolution Challenge</a></td>
+		</tr>
+		<tr>
 			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2024", target="_blank">CVPR-NTIRE 2024: Stereo Image Super-Resolution Challenge.</a></td>
 		</tr>
 		<tr>
@@ -1000,20 +1006,26 @@
 	</tbody>
 </table>
 
-<h3>程序委员会成员</h3>
+<h3>高级/程序委员会成员</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
-				<td> <a href="https://ecai2025.org/", target="_blank">28th European Conference on Artificial Intelligence (ECAI-25), 2025.</a></td>
+				<td> <a href="https://icmr2026.org/", target="_blank">16th ACM International Conference on Multimedia Retrieval (ICMR 26), 2026, PC.</a></td>
 			</tr>
 			<tr>
-				<td> <a href="https://2025.ijcai.org/", target="_blank">34th International Joint Conference on Artificial Intelligence (IJCAI-25), 2025.</a></td>
+				<td> <a href="https://2026.ijcai.org/", target="_blank">35th International Conference on Artificial Intelligence (IJCAI-26), 2026, PC.</a></td>
 			</tr>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR-NTIRE, 2022, 2023, 2024.</a></td>
+				<td> <a href="https://ecai2025.org/", target="_blank">28th European Conference on Artificial Intelligence (ECAI-25), 2025, SPC.</a></td>
 			</tr>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">ICCV, AIM: Advances in Image Manipulation workshop and challenges, 2022.</a></td>
+				<td> <a href="https://2025.ijcai.org/", target="_blank">34th International Joint Conference on Artificial Intelligence (IJCAI-25), 2025, PC.</a></td>
+			</tr>
+			<tr>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR-NTIRE, 2022, 2023, 2024, PC.</a></td>
+			</tr>
+			<tr>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">ICCV, AIM: Advances in Image Manipulation workshop and challenges, 2022, PC.</a></td>
 			</tr>
 		</tbody>
 </table>
