--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <tbody> 
 	<tr>
 	<td style="text-align: justify;">	
-	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation, object detection) and image processing (e.g., image super-resolution, image restoration under adverse weather, medical image processing). I have published more than 50 papers in top journals and conferences, including ACM Computing Survey, IEEE TIP\TNNLS\TMM\TCSVT\TMI, CVPR, ECCV, ICCV, AAAI, IJCAI, and MICCAI. Meanwhile, I received several premium awards, including the first prize for Innovation Achievements in Industry-Academia-Research Cooperation in China 2023, the Outstanding Ph.D. Graduates in Shanghai 2021, the CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 30 international conferences/journals, including TPAMI, TIP,TNNLS, TMM, TCSVT, CVPR, ICCV, ECCV, and MICCAI.
+	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. I am currently an associate professor at the School of Computer Science and Technology, East China Normal University. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation, object detection) and image processing (e.g., image super-resolution, image restoration under adverse weather, medical image processing). I have published more than 50 papers in top journals and conferences, including ACM Computing Survey, IEEE TIP\TNNLS\TMM\TCSVT\TMI, CVPR, ECCV, ICCV, AAAI, IJCAI, and MICCAI. Meanwhile, I also serve as an Associate Editor for the Journal on Image and Video Processing, a Guest Editor for Mathematics and IET Computer Vision, the Area Chair for the MICCAI 2026 Challenge, an organizer and program committee member for several international challenges, and a long-term reviewer for numerous international journals and conferences including TPAMI, TIP, TNNLS, TMM, CVPR, ICCV, ECCV, and MICCAI.
 	</td>
 	</tr>
 </tbody>
@@ -107,10 +107,11 @@
 <h2>News</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>I will be serving as an associate editor for the Journal of Image and Video Processing.</td></tr>
 		<tr><td>I will serve as a PC for ICMR, 2026.</td></tr>
 		<tr><td>I will serve as a SPC for IJCAI, 2026.</td></tr>
 		<tr><td>Congratulations! Google Scholar citations has reached 5,000 citations! 2025.</td></tr>
-		<tr><td>Congratulations! ESRT has reached 1,000 citations! 2025.</td></tr>
+		<!-- <tr><td>Congratulations! ESRT has reached 1,000 citations! 2025.</td></tr> -->
 		<tr><td>Congratulations! Selected into the World's Top 2% Scientists list, 2025.</td></tr>
 		<tr><td>Congratulations! MSRN has reached 1,000 citations! 2025.</td></tr>
 		<tr><td>One paper (IEEE TITS) is selected as Highly Cited Papers in the latest issue of ESI Index, 2025.</td></tr>
@@ -264,7 +265,7 @@
 </tbody>
 </table>
 
-<h2>Selected Publications [Total Citations: 5645] [Highest Citation: 1158] </h2>
+<h2>Selected Publications [Total Citations: 5387] [Highest Citation: 1128] </h2>
 <h4>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
@@ -711,7 +712,7 @@
 		<td width="206">
 		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】[Citations: 1100+]</font></a><br>
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】[Citations: 890+]</font></a><br>
 		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
 		<p><em>The Conference on Computer Vision and Pattern Recognition (<i><b>CVPR</b></i>) Workshop</em>, 2022. <br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
@@ -910,6 +911,15 @@
 
 
 <h2>Academic Services</h2>
+
+<h3>Associate Editor</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> <a href="https://link.springer.com/journal/13640#about-this-journal", target="_blank">Journal on Image and Video Processing</a></td>
+		</tr>
+	</tbody>
+</table>
 
 <h3>Area Chair</h3>
 <table id="tbTeaching" border="0" width="100%">
