--- a/index_zw.html
+++ b/index_zw.html
@@ -78,7 +78,7 @@
 <tbody> 
 	<tr>
 	<td style="text-align: justify;">		
-	李俊诚，上海市青年科技英才“扬帆计划”获得者，入选斯坦福大学发布的【全球前2%顶尖科学家】榜单，获中国产学研合作创新成果一等奖。博士毕业于华东师范大学，师从<b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b>教授，曾担任香港中文大学博后研究员，合作导师为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。2022年7月入职上海大学以来，主持包括国自然青年基金、上海市科委“科技创新行动计划”面上项目、上海市青年科技英才扬帆计划、上海高校青年教师重点资助项目及多个重点实验室开放课题。长期从事计算机视觉、自然图像/医学影像智能处理与人工智能等研究，取得了一系列原创性成果，在国际知名期刊和会议（如：ACM Computing Survey、IEEE TIP\TNNLS\TMM\TCSVT\TMI、CVPR、ECCV、ICCV、AAAI、IJCAI、MICCAI等）上发表论文50余篇（ESI高被引论文4篇）, 谷歌学术引用量超5300余次，其中单篇一作最高引用1100余次（2篇）。同时，还担任Mathematics和IET Computer Version期刊客座编辑、多个国际挑战赛的组织者和程序委员，并长期担任包括TPAMI、TIP、TNNLS、TMM、CVPR、ICCV、ECCV、MICCAI在内的多个国际期刊和会议审稿人。
+	李俊诚，副教授，博导，上海市青年科技英才“扬帆计划”获得者，入选斯坦福大学发布的【全球前2%顶尖科学家】榜单，获中国产学研合作创新成果一等奖。博士毕业于华东师范大学，师从<b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b>教授，曾担任香港中文大学博后研究员，合作导师为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。主持包括国自然青年基金、上海市科委“科技创新行动计划”面上项目、上海市青年科技英才扬帆计划、上海高校青年教师重点资助项目及多个重点实验室开放课题。长期从事计算机视觉、自然图像/医学影像智能处理与人工智能等研究，取得了一系列原创性成果，在国际知名期刊和会议（如：ACM Computing Survey、IEEE TIP\TNNLS\TMM\TCSVT\TMI、CVPR、ECCV、ICCV、AAAI、IJCAI、MICCAI等）上发表论文50余篇（ESI高被引论文4篇）, 谷歌学术引用量超5300余次，其中单篇一作最高引用1100余次。同时，还担任Journal on Image and Video Processing期刊副主编、Mathematics和IET Computer Version期刊客座编辑、MICCAI 2026挑战赛领域主席、多个国际挑战赛的组织者和程序委员，并长期担任包括TPAMI、TIP、TNNLS、TMM、CVPR、ICCV、ECCV、MICCAI在内的多个国际期刊和会议审稿人。
 	</td>
 	</tr>
 </tbody>
@@ -101,8 +101,9 @@
 <h2>新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>我将担任Journal on Image and Video Processing期刊副主编.</td></tr>
 		<tr><td>祝贺！谷歌学术总引用次数突破 5,000次！2025.</td></tr>
-		<tr><td>祝贺！ESRT的引用次数突破 1,000次！2025.</td></tr>
+		<!-- <tr><td>祝贺！ESRT的引用次数突破 1,000次！2025.</td></tr> -->
 		<tr><td>祝贺！再次入选全球前2%顶尖科学家榜单, 2025.</td></tr>
 		<tr><td>祝贺！MSRN的引用次数突破 1,000次！2025.</td></tr>
 		<tr><td>1 篇论文（IEEE TITS）入选ESI高被引论文, 2025.</td></tr>
@@ -279,7 +280,7 @@
 </table>
 
 
-<h2>精选出版物 [总引用: 5645] [最高引用: 1158] </h2>
+<h2>精选出版物 [总引用: 5387] [最高引用: 1128] </h2>
 <h4>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
@@ -719,7 +720,7 @@
 		<td width="206">
 		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】【引用：1100+】</font></a><br>
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【Hot】【引用：890+】</font></a><br>
 		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
 		<p><em>The Conference on Computer Vision and Pattern Recognition (<i><b>CVPR</b></i>) Workshop</em>, 2022. <br>
 		<iframe src="https://ghbtns.com/github-btn.html?user=luissen&repo=ESRT&type=star&count=true&size=small" frameborder="0" scrolling="0" width="150px" height="20px"></iframe>
@@ -942,6 +943,15 @@
 
 
 <h2>学术服务</h2>
+
+<h3>副编辑</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> <a href="https://link.springer.com/journal/13640#about-this-journal", target="_blank">Journal on Image and Video Processing</a></td>
+		</tr>
+	</tbody>
+</table>
 
 <h3>领域主席</h3>
 <table id="tbTeaching" border="0" width="100%">
