--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 <h2>News</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>I will be serving as a PC for ACMMM, 2026.</td></tr>
+		<tr><td>I will be serving as a PC for IMIC, 2026.</td></tr>
 		<tr><td>I will be serving as an associate editor for the Journal of Image and Video Processing.</td></tr>
 		<tr><td>I will serve as a PC for ICMR, 2026.</td></tr>
 		<tr><td>I will serve as a SPC for IJCAI, 2026.</td></tr>
@@ -265,7 +267,7 @@
 </tbody>
 </table>
 
-<h2>Selected Publications [Total Citations: 5532] [Highest Citation: 1126] </h2>
+<h2>Selected Publications [Total Citations: 5550] [Highest Citation: 1126] </h2>
 <h4>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
