--- a/index_zw.html
+++ b/index_zw.html
@@ -101,6 +101,8 @@
 <h2>新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>我将担任 ACMMM-2026 程序委员（PC）.</td></tr>
+		<tr><td>我将担任 IMIC-2026 程序委员（PC）.</td></tr>
 		<tr><td>我将担任Journal on Image and Video Processing期刊副主编.</td></tr>
 		<tr><td>祝贺！谷歌学术总引用次数突破 5,000次！2025.</td></tr>
 		<!-- <tr><td>祝贺！ESRT的引用次数突破 1,000次！2025.</td></tr> -->
