--- a/index.html
+++ b/index.html
@@ -149,8 +149,11 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>One paper is accepted to CVPR, 2026.</td></tr>
+		<tr><td>One paper is accepted to PR, 2026.</td></tr>
+		<tr><td>One paper is accepted to IEEE JBHI, 2025.</td></tr>
+		<tr><td>One paper is accepted to PR, 2025.</td></tr>
 		<tr><td>One paper is accepted to ACM Computing Surveys, 2025.</td></tr>
-		<tr><td>One paper is accepted to TMLR, 2025.</td></tr>
 		<tr><td>One paper is accepted to IEEE TSP, 2025.</td></tr>
 		<tr><td>One paper is accepted to PR, 2025.</td></tr>
 		<tr><td>One paper is accepted to ESWA, 2025.</td></tr>
