--- a/index_zw.html
+++ b/index_zw.html
@@ -165,8 +165,11 @@
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>一篇论文被 CVPR 接收, 2026.</td></tr>
+		<tr><td>一篇论文被 PR 接收, 2026.</td></tr> 
+		<tr><td>一篇论文被 JBHI 接收, 2026.</td></tr> 
+		<tr><td>一篇论文被 PR 接收, 2026.</td></tr>  
 		<tr><td>一篇论文被 ACM Computing Surveys接收, 2025.</td></tr> 
-		<tr><td>一篇论文被 TMLR 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 IEEE TSP 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 PR 接收, 2025.</td></tr>
 		<tr><td>一篇论文被 ESWA 接收, 2025.</td></tr>
